[gd_scene load_steps=22 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Player/Player.png" type="Texture" id=2]
[ext_resource path="res://Overlap/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player/SwordHitbox.gd" type="Script" id=4]
[ext_resource path="res://Shadows/SmallShadow.png" type="Texture" id=5]
[ext_resource path="res://Overlap/Hurtbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Music and Sounds/Swipe.wav" type="AudioStream" id=7]
[ext_resource path="res://Items/Sword.png" type="Texture" id=8]
[ext_resource path="res://Shaders/WhiteColor.shader" type="Shader" id=9]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 9 )
shader_param/active = false

[sub_resource type="CapsuleShape2D" id=2]
radius = 4.0
height = 4.0

[sub_resource type="Animation" id=3]
resource_name = "Idle"

[sub_resource type="Animation" id=4]
resource_name = "Walk"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -17.1, 0.0, 17.1, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 0.4, 0.4 ), Vector2( 0.6, 0.6 ), Vector2( 0.4, 0.4 ), Vector2( 0.5, 0.5 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Dash"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 5, 5 ), Vector2( 0.5, 0.5 ) ]
}

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../Sword:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Sword Attack"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("../Sword:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="CapsuleShape2D" id=7]
height = 12.0

[sub_resource type="CapsuleShape2D" id=8]
radius = 5.02104
height = 7.29734

[sub_resource type="Animation" id=9]

[sub_resource type="Animation" id=10]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 0.5, 0.6 ), Vector2( 0.5, 0.5 ) ]
}

[sub_resource type="Animation" id=11]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Player" type="KinematicBody2D" groups=["Saved"]]
collision_layer = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
position = Vector2( 0, -4 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = -1.5708
shape = SubResource( 2 )

[node name="Animations" type="Node" parent="."]

[node name="WalkPlayer" type="AnimationPlayer" parent="Animations"]
anims/Idle = SubResource( 3 )
anims/Walk = SubResource( 4 )

[node name="DashPlayer" type="AnimationPlayer" parent="Animations"]
anims/Dash = SubResource( 5 )

[node name="AttackPlayer" type="AnimationPlayer" parent="Animations"]
anims/RESET = SubResource( 12 )
"anims/Sword Attack" = SubResource( 6 )

[node name="HitboxPivot" type="Position2D" parent="."]
position = Vector2( 0, -4 )
rotation = 1.5708

[node name="SwordHitbox" parent="HitboxPivot" instance=ExtResource( 3 )]
position = Vector2( 15, 0 )
collision_mask = 8
script = ExtResource( 4 )

[node name="CollisionShape2D" parent="HitboxPivot/SwordHitbox" index="0"]
position = Vector2( -12, 0 )
scale = Vector2( 1.5, 1 )
shape = SubResource( 7 )
disabled = true

[node name="Shadow" type="Sprite" parent="."]
texture = ExtResource( 5 )
offset = Vector2( 0, 5 )

[node name="Hurtbox" parent="." instance=ExtResource( 6 )]
collision_layer = 4

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( -0.152542, -3.90432 )
shape = SubResource( 8 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="BlinkAnimationPlayer" type="AnimationPlayer" parent="."]
anims/Blink = SubResource( 9 )
anims/Start = SubResource( 10 )
anims/Stop = SubResource( 11 )

[node name="ShootAttackTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Sword" type="Node2D" parent="."]
position = Vector2( 0, -4 )

[node name="Node2D" type="Node2D" parent="Sword"]
position = Vector2( 0, -4 )
rotation = -1.5708

[node name="SwordSprite" type="Sprite" parent="Sword/Node2D"]
position = Vector2( 5.75913, -5.71231 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 8 )
offset = Vector2( 4, -13 )

[connection signal="animation_finished" from="Animations/DashPlayer" to="." method="_on_DashPlayer_animation_finished"]
[connection signal="animation_finished" from="Animations/AttackPlayer" to="." method="_on_AttackPlayer_animation_finished"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_started"]
[connection signal="timeout" from="ShootAttackTimer" to="." method="_on_ShootAttackTimer_timeout"]

[editable path="HitboxPivot/SwordHitbox"]
[editable path="Hurtbox"]
